Fixed problem with customer-select on smaller devices

--- a/src/main/webapp/css/components/customer-select.css
+++ b/src/main/webapp/css/components/customer-select.css
@@ -6,7 +6,18 @@
 .vr-customer-select,
 .vr-customer-select .id_customer_search,
 .vr-customer-select .name_customer_search {
-	display: inline-block;
+    display: inline-block;
+}
+
+@media only screen and (max-width: 600px){
+    .vr-customer-select .id_customer_search {
+        display: block;
+        margin-bottom: 5px;
+    }
+    
+    .vr-customer-select .name_customer_search.select2-container.with-icons.three-icons {
+        width: calc(100% - 75px) !important;
+    }
 }
 
 .vr-customer-select.with-icons.two-icons { width: calc(100% - 37px); }
